@@ -1,6 +1,9 @@
 CHANGES IN FLTK 1.1.0rc3
 
 	- Documentation updates.
+	- Fl_Value_Input now correctly determines if step()
+	  specifies an integer value.
+	- Fl_Help_View didn't add links inside PRE elements.
 	- OS/2 build fixes from Alexander Mai.
 	- Now use strlcat() instead of strncat() which could
 	  cause buffer overflows.
